terraform/routes.tf
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.shortnd.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.shortnd.id
  }
  tags = {
    Name        = "shortnd-public-rt"
    Environment = "dev"
    Project     = "shortnd"
    Tier        = "public"
  }

}

resource "aws_route_table_association" "public_1a" {
  subnet_id      = aws_subnet.public_1a.id
  route_table_id = aws_route_table.public.id
}
resource "aws_route_table_association" "public_1b" {
  subnet_id      = aws_subnet.public_1b.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.shortnd.id
  tags = {
    Name        = "shortnd-private-rt"
    Environment = "dev"
    Project     = "shortnd"
    Tier        = "private"
  }
}

resource "aws_route_table_association" "private_1a" {
  subnet_id      = aws_subnet.private_1a.id
  route_table_id = aws_route_table.private.id
}
resource "aws_route_table_association" "private_1b" {
  subnet_id      = aws_subnet.private_1b.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route" "private_nat" {
  route_table_id         = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat.id
}
